[hotfix/design] fix header alignment

--- a/src/layouts/Header.module.scss
+++ b/src/layouts/Header.module.scss
@@ -1,9 +1,9 @@
 .headerContainer{
   display: flex;
   justify-content: space-between;
-  padding: 30px 20px 20px 20px;
+  align-items: center;
+  padding: 20px 20px 20px 20px;
   border-bottom: 1px solid lightgray;
-
 };
 .menuContainer{
   display: flex;
